<resources>
    <string name="app_name">ДТЭК Портал</string>
    <string name="app_version">v%1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_title_exit">Выход</string>
    <string name="text_title_lock_screen">Блокировка экрана</string>
    <string name="text_message_lock_screen">Для использование приложение необходимо активировать блокировку экрана (пин-код, графический ключ, отпечаток)</string>
    <string name="text_btn_lock_screen">Установить</string>
    <string name="text_dialog_login">Введите логин</string>
    <string name="text_hint_login">Логин</string>
    <string name="text_dialog_sms">Введите код доступа</string>
    <string name="text_hint_sms">Код доступа</string>
    <string name="btn_sms">Запросить код доступа</string>
    <string name="btn_enter">Вход</string>
    <string name="text_sms_code">Sms-код поступает только на корпоративный номер\nРекомендуем ознакомиться с частыми вопросами в правом верхнем углу</string>
    <string name="text_menu_help">FAQ</string>
    <string name="title_news">НОВОСТИ</string>
    <string name="title_news_dtek">Новости ДТЭК</string>
    <string name="title_not_miss">Не пропустите</string>
    <string name="title_news_company">Новости предприятий</string>
    <string name="title_service">СЕРВИСЫ</string>
    <string name="title_car">Заказ автомобилей</string>
    <string name="title_business_trip">Управление командировками</string>
    <string name="title_references">Заказ справок</string>
    <string name="title_it_service">Заявки на ИТ-услуги</string>
    <string name="title_room_service">Обслуживание помещений</string>
    <string name="title_hr_vacation">Заявления на отпуск</string>
    <string name="title_qr">Сканировние QR</string>
    <string name="title_media">МЕДИА</string>
    <string name="title_photo">Фотогалерея</string>
    <string name="title_video">Видео</string>
    <string name="title_newspaper">Наша газета</string>
    <string name="title_ukr">Українською</string>
    <string name="language_ukr">Украинский</string>
    <string name="title_rus">На русском</string>
    <string name="language_rus">Русский</string>
    <string name="title_menu_communicate">КОМУНИКАЦИЯ</string>
    <string name="title_comm_service">Обратная связь</string>
    <string name="address_email">Developers@dtek.com</string>
    <string name="choose_client">Выберите почтовую программу</string>
    <string name="error_msg">Не удалось получить новости.</string>
    <string name="btn_retry">Повторить</string>
    <string name="error_msg_no_internet">Нет подключения к Интернету</string>
    <string name="error_msg_timeout">Сервер слишком долго реагировал</string>
    <string name="error_msg_unknown">Произошла непредвиденная ошибка</string>
    <string name="tap_to_reload">Нажмите, чтобы перезагрузить</string>
    <string name="dialog_wait">Пожалуйста, подождите…</string>
    <string name="text_hint_auth"><u>Для просмотра комментариев, пожалуйста, авторизуйтесь</u></string>
    <string name="text_hint_comments">Введите коментарий</string>
    <string name="txt_empty_list">Список пустой</string>
    <string name="tab_title_all">Все</string>
    <string name="tab_title_active">Активные</string>
    <string name="tab_title_archive">Архив</string>
    <string name="tab_title_draft">Черновики</string>
    <string name="tab_title_new">Новые</string>
    <string name="tab_title_in_work">В работе</string>
    <string name="tab_title_postpone">Отложенные</string>
    <string name="tab_title_all_ukr">Всі</string>
    <string name="tab_title_active_ukr">Активні</string>
    <string name="tab_title_archive_ukr">Архів</string>
    <string name="text_status">Статус</string>
    <string name="text_data_create">Дата создания</string>
    <string name="text_create_order">Общая информация</string>
    <string name="text_hint_city">Город заказа</string>
    <string name="text_hint_phone">Контактный телефон</string>
    <string name="text_hint_distance">Направление</string>
    <string name="text_transport_for">Транспорт предоставить для:</string>
    <string name="text_initiator">Инициатор заявки</string>
    <string name="text_number_passenger">Общее количество пассажиров</string>
    <string name="text_other_pass">Другие пассажиры</string>
    <string name="btn_add_passenger">+ Добавить пассажиров</string>
    <string name="text_route">Маршрут</string>
    <string name="text_hint_point_start">Пункт отправления</string>
    <string name="text_hint_date_time_start">Дата и время отправления</string>
    <string name="text_hint_date">Дата</string>
    <string name="text_hint_time">Время</string>
    <string name="text_hint_time_ukr">Час</string>
    <string name="date_picker_title">Дата:</string>
    <string name="time_picker_title">Время:</string>
    <string name="btn_add_point">+ Добавить промежуточный пункт</string>
    <string name="text_hint_point_end">Пункт назначения</string>
    <string name="text_hint_date_time_end">Дата и время прибытия</string>
    <string name="text_notes">Примечания</string>
    <string name="text_hint_comment">Введите примечания</string>
    <string name="btn_confirm">Отправить</string>
    <string name="btn_draft">Сохранить черновик</string>
    <string name="btn_cancel">Отменить заявку</string>
    <string name="btn_rating">Оценить</string>
    <string name="btn_archive_ukr">Архів</string>
    <string name="btn_archive_rus">Архив</string>
    <string name="text_passenger">Пассажир:</string>
    <string name="text_hint_fio_passenger">ФИО</string>
    <string name="text_hint_comment_passenger">Комментарии</string>
    <string name="text_cb_send_sms">Отправить sms</string>
    <string name="text_hint_number_sms">Номер для отправки SMS</string>
    <string name="text_hint_name_point">Промежуточный пункт</string>
    <string name="text_cb_expect">Ожидать</string>
    <string name="text_cb_take_away">Забрать в</string>
    <string name="text_time_expect">Время ожидания</string>
    <string name="order_car_massage_sent">Ваша заявка отправлена в черновики</string>
    <string name="text_error_city">Не не заполнено обязательное поле \"Город заказа\"</string>
    <string name="text_error_direction">Не не заполнено обязательное поле \"Направление\"</string>
    <string name="text_error_phone_null">Нео заполнено обязательное поле \"Контактный телефон\"</string>
    <string name="text_error_phone_format">Необходимо ввести корректный номер телефона(+38XXXXXXXXXX)</string>
    <string name="text_error_phone_passenger">Не заполнено обязательное поле пассажира \"Номер для отправки sms\"</string>
    <string name="text_error_passenger_fio">Не заполнено обязательное поле \"ФИО в блоке Пассажиры\"</string>
    <string name="text_error_phone_format_passenger">Необходимо ввести корректный номер телефона(+38XXXXXXXXXX) пассажира</string>
    <string name="text_error_numb_passenger">Не заполнено обязательное поле \"Общее колличество пассажиров\"</string>
    <string name="text_error_point_start">Не заполнено обязательное поле \"Пункт отправления\"</string>
    <string name="text_error_point_stop">Не заполнено обязательное поле \"Пункт назначения\"</string>
    <string name="text_error_point_address">Не заполнено обязательное поле \"Адресс промежуточного пункта\"</string>
    <string name="text_error_time_start">Указанное время начала поездки меньше текущего. Заявка считается выполненной!</string>
    <string name="text_error_time_point_numb">Укажите дату и время отправления в промежуточном пункте № %1$d больше, чем дату и время прибытия в промежуточный пункт.</string>
    <string name="text_error_time_point">Укажите дату и время прибытия в промежуточный пункт больше, чем дата и время отправления</string>
    <string name="text_error_time_finish">Укажите дату и время в поле \"Дата прибытия\" больше даты и времени в поле \"Дата отправления\"</string>
    <string name="text_error_time_take_away_start">Укажите дату и время в поле \"Дата забрать в\" больше даты и времени в поле \"Дата отправления\"</string>
    <string name="text_error_time_take_away_finish">Укажите дату и время в поле \"Дата забрать в\" меньше даты и времени в поле \"Дата прибытия\"</string>
    <string name="text_error_time_take_away_point">Укажите дату и время в попоследнем промежуточном пункте больше даты и времени в предыдущем промежуточном пункте</string>
    <string name="text_error_rating">Не заполнено обязательное поле \"Оценка\"</string>
    <string name="text_error_comment_rating">Не заполнено обязательное поле \"Коментарий к оценке\"</string>
    <string name="text_warning_date_start">Невыполненены требования по срокам подачи заявки (до 16:00 за один рабочий день до оказания транспортных услуг). Гарантировать предоставление машины диспетчеры не могут, в связи с возможностью отсутствия свободных машин на указанный период!</string>
    <string name="text_driver">Водитель</string>
    <string name="text_car">Автомобиль</string>
    <string name="text_comment">Комментарий</string>
    <string name="text_rating">Оценка качества работы водителя</string>
    <string name="text_comment_rating">Комментарий к оценке</string>
    <string name="text_select_rating">Выберите оценку</string>
    <string name="text_date_point">Дата прибытия в промежуточный пункт</string>
    <string name="text_it_order_list">Заявка №</string>
    <string name="text_info_user">Информация о пользователе</string>
    <string name="text_name_affects">На кого влияет</string>
    <string name="text_name_organization">Организация</string>
    <string name="text_personnel_number">Табельный номер</string>
    <string name="text_phone_number">Телефон</string>
    <string name="text_name_address">Адрес размещения</string>
    <string name="text_hint_address">Введите улицу</string>
    <string name="text_name_room">Комната</string>
    <string name="text_hint_room">№ комнаты</string>
    <string name="text_info_order">Информация о заявке</string>
    <string name="text_name_urgency">Срочность</string>
    <string name="text_name_reference_type">Тип справки</string>
    <string name="text_name_subject">Тема</string>
    <string name="text_hint_subject">Введите \"Тему\" заявки</string>
    <string name="text_name_description">Описание</string>
    <string name="text_name_solution">Решение</string>
    <string name="text_hint_description">Введите описание</string>
    <string name="text_info_general">Общая информация</string>
    <string name="text_number">Номер заявки</string>
    <string name="text_it_status">Статус</string>
    <string name="text_it_initiator">Инициатор</string>
    <string name="text_date_start">Дата создания</string>
    <string name="text_date_plan">Плановая дата завершения</string>
    <string name="text_date_end">Фактическая дата завершения</string>
    <string name="text_date_postponed">Дата, до которой отложено</string>
    <string name="text_info_rating">Оценка качества выполнения заявки</string>
    <string name="text_name_rate">Оценка</string>
    <string name="text_name_comment_rating">Обоснование оценки</string>
    <string name="text_error_itsm">Ошибка ITSM сервиса, попробуйте позже!</string>
    <string name="text_error_address">Необходимо заполнить поле \"Адрес размещения\"</string>
    <string name="text_error_subject">Необходимо заполнить поле \"Тема\"</string>
    <string name="additional_services">Додаткові послуги</string>
    <string name="request_number">Номер заявки</string>
    <string name="request_status">Статус</string>
    <string name="create_date">Дата створення:</string>
    <string name="button_delete">Видалити</string>
    <string name="button_recall">Відкликати</string>
    <string name="button_save">Зберегти</string>
    <string name="button_change">Змінити</string>
    <string name="button_approving">Відправити</string>
    <string name="comments">Коментар</string>
    <string name="service">Послуга</string>
</resources>