<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/buttons_layout"
    android:layout_width="match_parent"
    android:layout_height="62dp">

    <Button
        android:id="@+id/btn_delete"
        style="@style/ButtonStyle"
        android:layout_marginEnd="30dp"
        android:text="@string/button_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_save"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btn_recall"
        style="@style/ButtonStyle"
        android:layout_marginEnd="30dp"
        android:text="@string/button_recall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_change"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        />

    <!--<Button-->
    <!--android:id="@+id/btn_cancel"-->
    <!--style="@style/ButtonStyle"-->
    <!--android:text="@string/button_cancel"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="0.5"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/btn_save"
        style="@style/ButtonStyle"
        android:layout_marginEnd="5dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_save_changes"
        style="@style/ButtonStyle"
        android:layout_marginEnd="30dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_approving"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_change"
        style="@style/ButtonStyle"
        android:layout_marginEnd="5dp"
        android:text="@string/button_change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_approving"
        style="@style/ButtonStyle"
        android:layout_marginEnd="5dp"
        android:text="@string/button_approving"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>




</android.support.constraint.ConstraintLayout>