<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/status_info_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <LinearLayout
        style="@style/LayoutContentInside_1"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView_1"
            android:layout_weight="1.4"
            android:text="@string/request_number" />

        <TextView
            android:id="@+id/tv_request_number"
            style="@style/TextView_1"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        style="@style/LayoutContentInside_1"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView_1"
            android:layout_weight="1.4"
            android:text="@string/request_status" />

        <TextView
            android:id="@+id/tv_request_status"
            style="@style/TextView_1"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        style="@style/LayoutContentInside_1"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView_1"
            android:layout_weight="1.4"
            android:text="@string/create_date" />

        <TextView
            android:id="@+id/tv_create_date"
            style="@style/TextView_1"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>